- Dark mode's darkened backgrounds have been made slightly lighter (by up to 10%).

Data Changes:
- The Ares Light Fire 75's suppressor is no longer incorrectly referred to as the Ares Light Fire 70's suppressor.

Build 213
Application Fixes:
- Added a limited dark mode. The mode can be set and previewed in the Options menu. For existing users, Chummer will default to Light mode; for new users, Chummer will default to automatically checking the setting in Windows for whether apps should run in Light or Dark mode.
- Fixed an incorrect tag on submersion groups in career mode. 
- Fixed incorrect default multiplier for Technomancer Ordeals/Tasks. 
- Fixed a crash when changing priority selection if the character has FreeSpellsSkill improvements (ie Dedicated Spellslinger).
- Fixed a regression in career mode not allowing Initiation Groups to be joined or left properly. Closes #4115
- Fixed a myriad of cases where printing a character sheet in a language that is different from the language being used for the program would sometimes result in incorrect localization and/or number formats being used.
- Fixed qi foci improperly providing free levels of a power rather than free points. Closes #4116
- Qualities that unlock special skills are no longer all always effectively free when purchased traditionally.
- Amend files now default to not adding missing nodes by default unless no amendoperation is specified and the amend node has no children (i.e. default amendoperation would be "replace"). This generally makes amends with very general filters work properly again.
- In an Amend file, if a "recurse" node is set to not add itself if no target is found, it will still recurse into the amending nodes, just in case there is a node somewhere inside that is set to be added if no target is found.
- The availability filter for buying new cyberware or bioware now works properly for items that do not have a fixed, forced grade.